# design-qa-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  evaluate.sh  main.py  pyproject.toml
data/: chunk_by_rule.py
my_outputs/: compilation_predictions.csv  definition_predictions.csv  dimension_predictions.csv  func_perf_predictions.csv  presence_predictions.csv  results.txt  retrieval_predictions.csv
tasks/compilation/: full_compilation.py  single_compilation.py
tasks/definition/: full_definition.py  single_definition.py
tasks/dimension/: full_dimension.py  single_dimension.py
tasks/func_perf/: full_func_perf.py  single_func_perf.py
tasks/presence/: full_presence.py  single_presence.py
tasks/retrieval/: full_retrieval.py  single_retrieval.py
utils/: call_vlm.py  image_utils.py  keyword_search.py  mech_parts.py  prompt_builder.py  rule_search.py  tech_terms.py
