[project]
name = "design-qa-challenge"
version = "0.1.0"
description = "Challenging the Design QA Benchmark"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.1",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "rouge>=1.0.1",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
